Update Persistence Volume

--- a/Kubernetes Usage/Volumes/AzureVolume/wordpress-deployment.yaml
+++ b/Kubernetes Usage/Volumes/AzureVolume/wordpress-deployment.yaml
@@ -16,14 +16,20 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: wp-pv-claim
+  annotations:
+    volume.beta.kubernetes.io/storage-class: ""
   labels:
     app: wordpress
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 20Gi
+  selector:
+    # To make sure we match the claim with the exact volume, match the label
+    matchLabels:
+      usage: wordpress-storage
 ---
 apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
 kind: Deployment
@@ -51,7 +57,7 @@ spec:
         - name: WORDPRESS_DB_HOST
           value: wordpress-mysql
         - name: WORDPRESS_DB_PASSWORD
-            valueFrom:
+          valueFrom:
               secretKeyRef:
                 name: mysql-secrets
                 key: mysql-root-password
