--- a/Kubernetes Usage/Volumes/AzureVolume/mysql-deployment.yaml
+++ b/Kubernetes Usage/Volumes/AzureVolume/mysql-deployment.yaml
@@ -29,7 +29,7 @@ spec:
   selector:
     # To make sure we match the claim with the exact volume, match the label
     matchLabels:
-      usage: sample-storage
+      usage: mysql-storage
 ---
 apiVersion: apps/v1beta2 # for versions before 1.8.0 use apps/v1beta1
 kind: Deployment
