--- a/Kubernetes Usage/Volumes/AzureVolume/wordpress-persistence-volume.yaml
+++ b/Kubernetes Usage/Volumes/AzureVolume/wordpress-persistence-volume.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: sample-storage
+  name: wordpress-storage
   # The label is used for matching the exact claim
   labels:
-    usage: sample-storage
+    usage: wordpress-storage
 spec:
   capacity:
-    storage: 10Gi
+    storage: 500Gi
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
   azureFile:
-    secretName: azure-secret
-    shareName: mysqlshare
+    secretName: storage-secret
+    shareName: blogfileshare
     readOnly: false
