Change the Azure File Share for the MySQL Deployment

--- a/Blog/blog-mysql-secret.yaml
+++ b/Blog/blog-mysql-secret.yaml
@@ -5,5 +5,5 @@ metadata:
 type: Opaque
 data:
   mysql-root-password: <base64 root password>
-  mysql-user: <base64 username>
-  mysql-password: <base64 password>
+  mysql-user: <base64 user>
+  mysql-password: <base64 user password>
