--- a/Blog/blog-mysql-deployment.yaml
+++ b/Blog/blog-mysql-deployment.yaml
@@ -36,5 +36,5 @@ spec:
       - name: azurefileshare
         azureFile:
           secretName: storage-secret
-          shareName: blogfileshare
+          shareName: mysqlshare
           readOnly: false
