--- a/Blog/blog-secret.yaml
+++ b/Blog/blog-secret.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: blog
 type: Opaque
 data:
-  azurestorageaccountname: <value>
-  azurestorageaccountkey: <value>
+  azurestorageaccountname: ""
+  azurestorageaccountkey: ""
