Added Ingress Implementation

--- a/Blog/blog-mysql-secret.yaml
+++ b/Blog/blog-mysql-secret.yaml
@@ -4,6 +4,6 @@ metadata:
   name: mysql-secrets
 type: Opaque
 data:
-  mysql-root-password: <base64 root password>
-  mysql-user: <base64 user>
-  mysql-password: <base64 user password>
+  mysql-root-password: RnVubnlzNTE0MA==
+  mysql-user: a29sZXhpbmZvcw==
+  mysql-password: RnVubnlzNTE0MA==
